# MihoX

./: .gitignore  Makefile  README.md  README_RU.md  analysis_options.yaml  build-android.bat  build-release.bat  build-windows.bat  distribute_options.yaml  pubspec.yaml  setup.dart
.github/workflows/: build-core.yaml  build.yaml  macos-sign-notarize.yaml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/core/: build.gradle.kts
android/core/src/main/cpp/: CMakeLists.txt  core.cpp  jni_helper.cpp
android/core/src/main/cpp/includes/arm64-v8a/: libclash.h
android/core/src/main/cpp/includes/armeabi-v7a/: libclash.h
arb/: intl_en.arb  intl_ja.arb  intl_ru.arb  intl_zh_CN.arb
core/: action.go  android_bride.go  common.go  constant.go  go.mod  go.sum  hub.go  lib.go  lib_android.go  server.go
core/constant/: version.go
core/tun/: tun.go
lib/: application.dart  controller.dart  core_version.dart  main.dart  state.dart
lib/clash/: core.dart  interface.dart  lib.dart
lib/common/: android.dart  app_localizations.dart  color.dart  common.dart  constant.dart  context.dart  converter.dart  datetime.dart  file_logger.dart  fixed.dart  function.dart  future.dart  http.dart  icons.dart  iterable.dart  keyboard.dart  launch.dart  launch_linux.dart  launch_windows.dart  link.dart  lock.dart  measure.dart  mixin.dart  navigation.dart  navigator.dart  network.dart  num.dart  path.dart  picker.dart  preferences.dart  print.dart  protocol.dart  (+14 more)
linux/: CMakeLists.txt  my_application.cc
windows/: CMakeLists.txt
(+200 files in other folders)
